[package]
name = "bbs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381_plus = { version = "0.7.0", features = ["hashing"] }
rand = "0.8.5"
hkdf = "0.11.0"
sha2 = "0.9"
sha3 = "0.9"
hex = "0.4.3"