[package]
name = "bbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381_plus = { version = "0.6.0", features = ["hashing"] }
rand = "0.8.5"
hkdf = "0.11.0"
sha2 = "0.9"
sha3 = "0.9"
subtle = "2.4"
itertools = "0.10"

[dev-dependencies]
hex-literal = "0.3"
fluid = "0.4"
hex = "0.4"
serde_json = "1.0"
serde = "1.0"